# Bubo-Os

./: .gitignore  BUBO_BUILD_COMPLETE.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  bubo_dock.py  cmake.ini  composite_desktop.py  composite_storm.py  kernel.ld  launch_bubo.py  lv_conf.h  render_desktops.py  requirements.txt  run.bat  run_kami.bat  run_rain.bat
.github/workflows/: cmake.yml  raven-ci.yml
agents/: README.md  batty.bat
agents/corvus/: corvus.py
agents/genki/: genki.py
agents/kami/: generate_voice.py  kami.py  kami_window.py
agents/vera/: vera.py
agents/world/: bike_arrival.py  bubo_desktop.py  desktop_icons.py  dock.py  home_hub.py  pull_tray.py  rain_canvas.py  weather_widget.py  world_bus.py
apps/: corvus_browser.c  corvus_dashboard.c  corvus_search.c  landon_center.c  live_mode.c  screen_recorder.c  settings_app.c  terminal_app.c
boot/: boot.asm  interrupts.asm  scheduler_asm.asm
docs/: ALCHEMICAL_FRAMEWORK.md  ALCHEMICAL_LANGUAGE_SPEC.md  CONSTITUTIONAL_KERNEL.md  alter_architecture.md  architecture_v1.2.md  doubled_down_vision_v1.2.md  osBushido.md
drivers/: gpu.c  net.c  sound.c  vga.c
engine/: boot_cinematic.c  characters.c  corvus_home.c  ecs.c  physics.c  racing_game.c  raven_engine.c  renderer3d.c  world.c
graphics/: clouds.c  corvus_display.c  desktop.c  font.c  framebuffer.c  gui.c  lv_port_bubo.c  lv_port_bubo.h  lv_theme_akatsuki.c  lv_theme_akatsuki.h  polish.c  vfx.c
include/: boot_cinematic.h  bubo_controller.h  bubo_dashboard.h  bubo_display.h  bubo_input_map.h  bubo_keyboard.h  bubo_particles.h  bubo_weather.h  characters.h  clouds.h  corvus.h  corvus_archivist.h  corvus_brain.h  corvus_browser.h  corvus_bubo.h  corvus_claude.h  corvus_constitution.h  corvus_dashboard.h  corvus_deepseek.h  corvus_display.h  corvus_fcn.h  corvus_flow.h  corvus_home.h  corvus_search.h  corvus_vash.h  deepflow_colors.h  desktop.h  dysarthria.h  ecs.h  emergency.h  font.h  framebuffer.h  game_engine.h  gpu.h  gui.h  handtrack.h  idt.h  initrd.h  kernel_ext.h  keyboard.h  (+47 more)
iso/boot/: bubo.kernel  raven.kernel
iso/boot/grub/: grub.cfg
kernel/: admin_panel.cpp  admin_panel.hpp  bubo_boot.c  bubo_controller.c  bubo_keyboard.c  bubo_particles.c  bubo_weather.c  corvus.c  corvus_archivist.c  corvus_brain.c  corvus_bubo.c  corvus_chamber.c  corvus_constitution.c  corvus_fcn.c  corvus_flow.c  corvus_vash.c  dedication.h  dysarthria.c  emergency.c  handtrack.c  healer.cpp  healer.hpp  hwdetect.cpp  hwdetect.hpp  idt.c  initrd.c  kernel.c  keyboard.c  klib.c  llm.c  lowspec.cpp  lowspec.hpp  onboarding.c  pit.c  pmm.c  posix_stub.c  raven.cpp  raven.hpp  rinnegan.c  rinnegan_drag.c  (+18 more)
mater/: Cargo.toml
mater/src/: main.rs
moltbook/: bubo_credentials.json  manus_credentials.json  vera_credentials.json
